# hlox

./: .gitignore  Foo.hs  Foo2.hs  README.md  Scanner.hs  hlox.cabal  shell.nix
npins/: sources.json
src/: Main.hs  Scanner.hs
test/: example.lox
