cabal-version:      3.4
name:               hlox
version:            0.1.0.0
homepage:           https://github.com/wbadart/hlox
build-type:         Simple

executable hlox
    main-is:          Main.hs
    ghc-options:      -Wall
    other-modules:    Scanner
    build-depends:    base ^>=4.19
                      , containers
    hs-source-dirs:   src
    default-language: Haskell2010
